==> AgentTJE/ACK-Toggle-Capability-Demo/src/ack_arduino_platform.cpp <==
#include "ack.h"
#include <Arduino.h>
#include "ack_core_power_saving.h"
#include "ack_crc32.h"
#include <stdarg.h>
#define ARDUINO_PIN_HOST_INTERRUPT 2
#define ARDUINO_PIN_RESET 3
#define ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_1 1
#define ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_2 2
#define ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_3 3
#define ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_4 4
#define ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_5 5
#define ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_6 6
#define ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_7 7
#define ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_8 8
#define ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_9 9
#define ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_10 10
#define ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_11 11
#define ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_12 12
#define ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_13 13
#define ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_14 14
#define ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_15 15
#define ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_16 16
#define ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_17 17
#define ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_18 18
#define ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_19 19
#define ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_20 20
#define ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_21 21

void ACKPlatform_Initialize()
{
    Serial.begin(115200);
    Serial1.begin(115200);

    pinMode(ARDUINO_PIN_HOST_INTERRUPT, INPUT_PULLUP);
    pinMode(ARDUINO_PIN_RESET, OUTPUT);

#ifdef ACK_MODULE_POWER_SAVING
    // Make sure power saving lock starts unlocked.
    pinMode(ACK_MODULE_POWER_SAVING_LOCK_PIN, OUTPUT);
    digitalWrite(ACK_MODULE_POWER_SAVING_LOCK_PIN, ACK_MODULE_POWER_SAVING_LOCK_ACTIVE ? LOW : HIGH);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_1
    pinMode(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_1, INPUT);
    digitalRead(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_1);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_2
    pinMode(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_2, OUTPUT);
    digitalWrite(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_2, LOW);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_3
    pinMode(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_3, OUTPUT);
    digitalWrite(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_3, LOW);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_4
    pinMode(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_4, OUTPUT);
    digitalWrite(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_4, LOW);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_5
    pinMode(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_5, OUTPUT);
    digitalWrite(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_5, LOW);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_6
    pinMode(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_6, OUTPUT);
    digitalWrite(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_6, LOW);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_7
    pinMode(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_7, OUTPUT);
    digitalWrite(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_7, LOW);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_8
    pinMode(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_8, OUTPUT);
    digitalWrite(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_8, LOW);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_9
    pinMode(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_9, OUTPUT);
    digitalWrite(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_9, LOW);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_10
    pinMode(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_10, OUTPUT);
    digitalWrite(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_10, LOW);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_11
    pinMode(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_11, OUTPUT);
    digitalWrite(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_11, LOW);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_12
    pinMode(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_12, OUTPUT);
    digitalWrite(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_12, LOW);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_13
    pinMode(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_13, OUTPUT);
    digitalWrite(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_13, LOW);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_14
    pinMode(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_14, INPUT);
    digitalRead(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_14);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_15
    pinMode(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_15, INPUT);
    digitalRead(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_15);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_16
    pinMode(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_16, INPUT);
    digitalRead(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_16);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_17
    pinMode(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_17, OUTPUT);
    digitalWrite(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_17, LOW);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_18
    pinMode(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_18, OUTPUT);
    digitalWrite(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_18, LOW);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_19
    pinMode(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_19, OUTPUT);
    digitalWrite(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_19, LOW);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_20
    pinMode(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_20, OUTPUT);
    digitalWrite(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_20, LOW);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_21
    pinMode(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_21, OUTPUT);
    digitalWrite(ARDUINO_PIN_SAMPLE_APPLICATIONS_GPIO_21, LOW);
#endif
}

void ACKPlatform_WriteDigitalPin(ACKHardwarePin_t pin, bool state)
{
    digitalWrite(sg_arduinoDigitalPins[pin], state ? HIGH : LOW);
}

bool ACKPlatform_ReadDigitalPin(ACKHardwarePin_t pin)
{
    return LOW != digitalRead(sg_arduinoDigitalPins[pin]);
}

void ACKPlatform_SetDigitalPinPWMLevel(ACKHardwarePin_t pin, uint8_t val)
{
    // Despite the name, analogWrite isn't about digital-to-analog conversion; it's used for PWM.
    analogWrite(sg_arduinoDigitalPins[pin], val);
}

bool ACKPlatform_Send(const void* buffer, size_t length, uint32_t timeoutMilliseconds)
{
    size_t i = 0;
    uint32_t startTime = millis();

    for (i = 0; i < length; ++i)
    {
        if ((millis() - startTime) >= timeoutMilliseconds)
        {
            return false;
        }

        Serial1.write(((const uint8_t*)buffer)[i]);
    }

    return true;
}

bool ACKPlatform_Receive(void* pBuffer, size_t length, uint32_t timeoutMilliseconds)
{
    size_t bytesRead = 0;
    uint32_t startTime = millis();

    // Note that the timeout check is carefully constructed to work even if millis() wraps.
    while ((bytesRead < length) && ((millis() - startTime) < timeoutMilliseconds))
    {
        if (Serial1.available())
        {
            ((uint8_t*)pBuffer)[bytesRead] = Serial1.read();
            bytesRead++;
        }
    }

    return bytesRead == length;
}

void ACKPlatform_DrainRead()
{
    while (Serial1.available())
    {
        Serial1.read();
    }
}

void ACKPlatform_DebugPrint(const char* pMessage)
{
    Serial.print(pMessage);
}
