==> Microchip-MPLAB-Harmony/reference_apps/apps/sam_d21_cnano/ACK_Device_SDK_3.1.202002192328/user/platform/samd21_amazon_ack/hmcu_port/ack_samd21_platform.c <==
#include "ack.h"
#include "ack_circularbuffer.h"
#include "ack_crc32.h"
#include "ack_samd21_ota.h"
#include "ack_user_platform.h"
#include <inttypes.h>
#include <stdarg.h>
#include <stdio.h>
#include "definitions.h"
#define HIGH 1
#define LOW 0

void ACKPlatform_Initialize(void)
{
#ifdef ACK_SAMPLE_APPLICATIONS_LED_PIN
    // Make sure the LED starts in an off state.
    ACKPlatform_WriteDigitalPin(ACK_HW_PIN_SAMPLE_APPLICATIONS_LED, LOW); 
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_1
    ACKPlatform_WriteDigitalPin(ACK_HW_PIN_SAMPLE_APPLICATIONS_GPIO_1, false);
#endif
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_2
    ACKPlatform_WriteDigitalPin(ACK_HW_PIN_SAMPLE_APPLICATIONS_GPIO_2, false);
#endif    
#ifdef ACK_SAMPLE_APPLICATIONS_GPIO_PIN_3
    ACKPlatform_WriteDigitalPin(ACK_HW_PIN_SAMPLE_APPLICATIONS_GPIO_3, false);
#endif    
    
    /* Register a callback for write events */
    SERCOM3_USART_WriteCallbackRegister(usartWriteEventHandler, (uintptr_t) NULL);
    
    SERCOM3_USART_WriteThresholdSet(127);
    
    SERCOM3_USART_WriteNotificationEnable(true, true);
    
    /* Register a callback for read events */
    SERCOM3_USART_ReadCallbackRegister(usartReadEventHandler, (uintptr_t) NULL); 
     
    SERCOM3_USART_ReadThresholdSet(1);
    
    memset(rxBuffer,0,512);
    
    SERCOM3_USART_ReadNotificationEnable(true, true);
}

void ACKPlatform_WriteDigitalPin(ACKHardwarePin_t pin, bool state)
{
#ifdef ACK_SAMPLE_APPLICATIONS_LED_PIN
    if(pin == ACK_HW_PIN_SAMPLE_APPLICATIONS_LED)
        PORT_PinWrite(sg_samd21DigitalPins[pin],state ? LOW : HIGH);
    else
        PORT_PinWrite(sg_samd21DigitalPins[pin],state ? HIGH : LOW);
#else
    PORT_PinWrite(sg_samd21DigitalPins[pin],state ? HIGH : LOW);
#endif    
}

bool ACKPlatform_ReadDigitalPin(ACKHardwarePin_t pin)
{
#ifdef ACK_SAMPLE_APPLICATIONS_LED_PIN
    if(pin == ACK_HW_PIN_SAMPLE_APPLICATIONS_LED)
        //PORT_PinLatchRead is used to read pins configured as Output
        return HIGH != PORT_PinLatchRead(sg_samd21DigitalPins[pin]);    
    else 
        //PORT_PinRead is used to read pins configured as Input
        return LOW != PORT_PinRead(sg_samd21DigitalPins[pin]);
#else    
    return LOW != PORT_PinRead(sg_samd21DigitalPins[pin]);
#endif    
}

void ACKPlatform_SetDigitalPinPWMLevel(ACKHardwarePin_t pin, uint8_t val)
{
    // Need to replace with PWM
#ifdef ACK_SAMPLE_APPLICATIONS_LED_PIN    
    if(pin == ACK_HW_PIN_SAMPLE_APPLICATIONS_LED)
        PORT_PinWrite(sg_samd21DigitalPins[pin],val >= 128 ? LOW : HIGH);
    else
        PORT_PinWrite(sg_samd21DigitalPins[pin],val >= 128 ? HIGH : LOW);
#else
    PORT_PinWrite(sg_samd21DigitalPins[pin],val >= 128 ? HIGH : LOW);
#endif    
}

bool ACKPlatform_Send(const void* pBuffer, size_t length, uint32_t timeoutMilliseconds)
{
    uint32_t delayTicks = 0;
    uint32_t startTime = SYSTICK_TickCounterGet();     
    
    delayTicks=(1000 * timeoutMilliseconds)/SYSTICK_INTERRUPT_PERIOD_IN_US;
    
    SERCOM3_USART_Write((uint8_t*)pBuffer, length);
    
    while(txThresholdEventReceived != true){
        if ((SYSTICK_TickCounterGet() - startTime) >= delayTicks)
        {
            ACK_DEBUG_PRINT_D("\r\nH-TX ERROR");
            return false;
        }
    }
    
    txThresholdEventReceived = false;
    return true;
}

bool ACKPlatform_Receive(void* pBuffer, size_t length, uint32_t timeoutMilliseconds)
{
    uint32_t delayTicks = 0;
    uint32_t startTime = SYSTICK_TickCounterGet();
    delayTicks=(1000 * timeoutMilliseconds)/SYSTICK_INTERRUPT_PERIOD_IN_US;
    
    while(nBytesRead < (length))
    {
        if ((SYSTICK_TickCounterGet() - startTime) >= delayTicks)
        {
            ACK_DEBUG_PRINT_D("H-RX ERROR");
            nBytesRead = 0;
            return false;
        }
    }   
    
    if(lastreadbyte != 0)
        memcpy((uint8_t*)pBuffer,(uint8_t*)&rxBuffer[lastreadbyte],length);
    else
       memcpy((uint8_t*)pBuffer,(uint8_t*)&rxBuffer[0],length); 
    
    while(SERCOM3_USART_ReadCountGet() != 0);
    
    ACKPlatform_Delay(50);
    if(nBytesRead > length){
        nBytesRead = nBytesRead - length;
        lastreadbyte = length;
    }else{

        nBytesRead = 0;  
        lastreadbyte = 0;
    }
    return true;
}

void ACKPlatform_DrainRead(void)
{
    while(SERCOM3_USART_ReadCountGet() > 0)
    {

    }
    nBytesRead = 0;
}

void ACKPlatform_DebugPrint(const char* pMessage, ...)
{
   
    char print_buffer[250];

    va_list argumentptr;
    va_start(argumentptr, pMessage);
    int count = vsnprintf(print_buffer, sizeof(print_buffer) - 2, pMessage, argumentptr);
    va_end(argumentptr);
    
    if (count >= 0)
    {
        print_buffer[count] = '\r';
        print_buffer[count + 1] = '\n';
        count += 2;

        SERCOM5_USART_Write((uint8_t*)print_buffer, count);
    }
  
}
